Just did basic Styling on the header of the web page

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "watchify": "^3.4.0"
   },
   "dependencies": {
+    "bourbon": "^4.2.6",
     "font-awesome": "^4.4.0",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
+    "neat": "^1.2.2",
     "normalize.css": "^3.0.3",
     "underscore": "^1.8.3"
   }
