--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "bourbon": "^4.2.6",
+    "bower": "^1.6.8",
+    "components": "^0.1.0",
     "font-awesome": "^4.4.0",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
